force-app/main/default/objects/Onboarding_Tasks__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <description>Create a contact list for your team and emergency contacts.</description>
    <label>Contacts</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>