force-app/main/default/objects/Onboarding_Tasks__c/fields/Contracts_and_Documents__c.field-meta.xml
<CustomField>
    <fullName>Contracts_and_Documents__c</fullName>
    <description>The employee should fill out company documents, employee contract documents and company policy</description>
    <label>Contracts and Documents</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Not executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>