force-app/main/default/objects/Onboarding_Tasks__c/fields/Create_new_accounts__c.field-meta.xml
<CustomField>
    <fullName>Create_new_accounts__c</fullName>
    <description>The employee must create new accounts on the enterprise collaboration platforms.</description>
    <label>Create new accounts</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Not executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>