force-app/main/default/objects/Onboarding_Tasks__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>To improve</fullName>
            </value>
            <value>
                <fullName>Mediocre</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>