force-app/main/default/objects/Onboarding_Tasks__c/fields/Feedback_Description__c.field-meta.xml
<CustomField>
    <fullName>Feedback_description__c</fullName>
    <label>Feedback description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>