force-app/main/default/objects/Onboarding_Tasks__c/fields/Feedback_description_onboarding_task__c.field-meta.xml
<CustomField>
    <fullName>Feedback_description_onboarding_task__c</fullName>
    <label>Feedback description onboarding task</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>