force-app/main/default/objects/Onboarding_Tasks__c/fields/Security_and_privacy_training__c.field-meta.xml
<CustomField>
    <fullName>Security_and_privacy_training__c</fullName>
    <description>The employee must complete security training and data privacy training.</description>
    <label>Security and privacy training</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Not executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>